[gd_scene load_steps=4 format=1]

[ext_resource path="res://Assets/fonts/DejaVuSans/DejaVuSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dialogue/button.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/font = ExtResource( 1 )

[node name="Button" type="Label"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 461.0
margin/bottom = 106.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.59375, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0.429688, 1, 0, 1 )
align = 1
valign = 3
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 2 )

[connection signal="focus_enter" from="." to="." method="_on_Button_focus_enter"]

[connection signal="mouse_enter" from="." to="." method="_on_Button_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_Button_mouse_exit"]


